--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
                    <p>...where you can belong to a school club, a gaming group, or a worldwide art community. 
                     Where just you and a handful of friends can spend time together. 
 
-                    
+                
                        A place that makes it easy to talk every day and hang out more often.</p>
                   </div>
+                  <p>hello this is test</p>
                  <div class="btn">
                <button class="white">Download for windows</button>
                <button class="black">Open discord in your browser</button>
